--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,61 @@
     margin-left: 30%;
 }
 #imgWinePerfil{
-    height:350px;
-    display: block;
+    height:240px;
+    margin-left: 45%;
+    margin-bottom: 50px;
+}
+#cardWinePerfil{
+    margin-top: 50px;
+}
+#cardHome{
+    display:inline-block;
+}
+#cardWinePortada{
+    height: 500px;
+    margin-bottom: 50px;
+}
+#imgWinePortada{
+    height:200px;
     margin-left: 40%;
+}
+#headerPortada>h4{
+    font-size: 20px;
+}
+#imgWinePortada{
+    height:250px;
+    margin-left: 40%;
+    position: relative;
+}
+#cardFooterPortada{
+    width: 100%;
+    position: inline-block;
+}
+#precioPortada{
+    text-align: center;
+    font-size: 20px;
+    padding-right: 15px;
+}
+
+#precioPortada a{
+    width: 120px;
+}
+
+#favorito{
+    float: right;
+}
+#favorito img{
+    width: 30px;
+    float: right;
+}
+#contaLikes{
+    float: left;
+    padding: 8px;
+}
+#like img{
+    width: 35px;
+    float: left;
+}
+#comentarioVino{
+    padding: 20px;
 }
