--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,8 +27,8 @@ footer li{
 h2{
     font-family: titulos;
     text-align: center;
-    font-size: 60px;
-    font-weight: bold;
+    font-size: 80px;
+    font-weight: 100px;
 }
 #logoCabecera{
     width: 87px;
@@ -64,6 +64,7 @@ h2{
 }
 #carouselImagenes img{
     height: 300px;
+    background-size: cover;
 }
 
 #imgWinePerfil{
@@ -91,7 +92,6 @@ h2{
     display: block;
     margin-left: auto;
     margin-right: auto;
-
 }
 .card-header{
     background-color: rgba(131, 26, 26, 0.979);
@@ -173,9 +173,10 @@ h2{
 }
 #imgTipoWine{
     margin-top: 20px;
+    transition: 0.6s;
 }
 #imgTipoWine:hover{
-    transition: 3s;
+    transition: 0.6s;
     opacity: 0.8;
 }
 #cabeceraTinto{
@@ -246,7 +247,7 @@ h2{
 }
 #cabeceraUsuarios h2{
     font-size: 60px;
-    font-weight: bolder;
+    font-weight: lighter;
     padding-top: 15px;
 }
 thead,#detallePrecio{
